GKE/general/ingress/ingress-gke-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: gke-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"    
spec:
  rules:
  - host: "gkeapps-dev.<dns-internal-name>"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ratingsweb-service
            port:
              number: 80
