GKE/general/ingress/internal-gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "internal-ingress-ip"
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.allow-http: "true"
    # ingress.gcp.kubernetes.io/pre-shared-cert: "gke-ingress-cert"
spec:
  # tls:
  # - hosts:
  #   - "*.<dns-name>"
  #   secretName: gke-ingress-cert
  defaultBackend:
    service:
      name: nginxapp-svc
      port:
        number: 80
  rules:
  - host: "apacheapp.<dns-name>"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: apacheapp-svc
            port:
              number: 80
  - host: "nginxapp.<dns-name>"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginxapp-svc
            port:
              number: 80
